# CeresFile

./: CMakeLists.txt  README.md
cmake/: CeresFileConfig.cmake
include/CeresFile/: BufferedFile.h  CheckedFile.h  Directory.h  File.h  FileAction.h  FileCallback.h  FileChecker.h  FileWatch.h  SimpleFile.h  TemporaryDirectory.h
src/: BufferedFile.cpp  CheckedFile.cpp  Directory.cpp  File.cpp  FileChecker.cpp  FileCheckerImpl.cpp  FileCheckerImpl.h  FileCheckerSingleton.cpp  FileCheckerSingleton.h  FileView.cpp  RandomString.cpp  SimpleFile.cpp  TemporaryDirectory.cpp
test/: BufferedFileTest.cpp  CMakeLists.txt  CheckedFileTest.cpp  FileCheckerImplTest.cpp  FileTest.cpp  RandomStringTest.cpp  SimpleFileTest.cpp  TemporaryDirectoryTest.cpp  Util.cpp  Util.h
